# wiki-vector-search

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pkg.yml
docs/: index.md  quickstart.md  reference.md
scripts/: generate_reference.py
test/: conftest.py  test_wiki_vector_search.py  test_wikitool.py
test/__snapshots__/: test_wikitool.ambr
test/extras/st/: test_st_provider.py
test/extras/st/__snapshots__/: test_st_provider.ambr
wiki_vector_search/: __init__.py
wikitool/: __init__.py  llm_provider.py  tool.py
wikitool/extras/: st_provider.py
wikitool/sources/: wiki_source.py
