[tool.poetry]
name = "wiki-vector-search"
version = "0.1.0"
description = "Semantic search over Wikipedia articles"
authors = ["selfint <selfint@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
wikipedia-api = "^0.6.0"
sentence-transformers = { version = "^2.2.2", optional = true }
torch = { version = "^2.1.2", optional = true }


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mkdocstrings-python = "^1.8.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
griffe-typingdoc = "^0.2.4"
black = "^23.12.1"
isort = "^5.13.2"

[tool.poetry.extras]
fe = ["sentence-transformers"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
