[tool.poetry]
name = "wikitool"
version = "0.1.0"
description = "Semantic search over Wikipedia articles"
authors = ["selfint <selfint@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
wikipedia-api = "^0.6.0"
sentence-transformers = { version = "^2.2.2", optional = true }


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mkdocstrings-python = "^1.8.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
griffe-typingdoc = "^0.2.4"
black = "^23.12.1"
isort = "^5.13.2"
syrupy = "^4.6.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"

[tool.poetry.extras]
st = ["sentence-transformers"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
